--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ asperiores nesciunt, fugiat dignissimos. Nisi kthenm temporal quo ea excepturi n
    <h2>Copyright 2025 &copy;,Yummy Foods</h2>
    <p>All Rights Reserved</p>
    <p>Developed and Maintained By 
-      <a href="">Kuri Mahesh</a>
+      <a href="https://kurimahesh.github.io/foodieapplication/">Kuri Mahesh</a>
    </p>
 </div>
 </body>
